--- a/apps/core/.swcrc
+++ b/apps/core/.swcrc
@@ -1,7 +1,7 @@
 {
+	"$schema": "https://json.schemastore.org/swcrc",
 	"minify": true,
 	"sourceMaps": "inline",
-	"inlineSourcesContent": true,
 	"jsc": {
 		"parser": {
 			"syntax": "typescript",
