fix: docker compose dev now run with packages dev script

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,6 +1,6 @@
 services:
   empty-node:
-    command: yarn dev --filter=empty-node
+    command: yarn dev --filter=empty-node --filter=./packages/
     volumes:
       - .:/app
       - /app/node_modules
