--- a/packages/empty-node/package.json
+++ b/packages/empty-node/package.json
@@ -8,14 +8,15 @@
 		"dist/**"
 	],
 	"scripts": {
-		"build": "tsc",
-		"dev": "tsc -w",
+		"build": "tsup",
+		"dev": "tsup --watch",
 		"clean": "rimraf .turbo node_modules dist"
 	},
 	"dependencies": {},
 	"devDependencies": {
 		"@w/tsconfig": "*",
 		"rimraf": "^3.0.2",
+		"tsup": "^6.2.3",
 		"typescript": "^4.8.2"
 	}
 }
